--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,33 +1,27 @@
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 50%;
-  }
-  
-  .table1{
-  position: absolute;
-  top: 80px;
-  left: 35%;
-  max-width: 400px;
-  max-height: 200px;
-  }
 
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
-
-
-thead {color:green;}
-tbody {color:blue;}
-table, th, td {
- border: 1px solid black;
+.titleCard {
+  left: 350px;
+  top:700px;
+  height: 500px;
+  position: relative;
 }
-td, th{
- padding: 5px;
+
+.dataTable{
+  top:700px;
+  height: 300px;
+  border: 1px solid rgba(34,36,38,.15);
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.OrderDetail{
+  border: 1px solid rgba(34,36,38,.15);
+}
+
+@media only screen and (max-width: 1200px){
+.RestTable{
+  border: 1px solid rgba(34,36,38,.15);
+}
 }
